# engine

./: .gitignore  CMakeLists.txt  README.md  asset_info.vcxproj  asset_info.vcxproj.filters  engine.sln  engine.vcxproj  engine.vcxproj.filters
data/assets/: cube.blend  cube.fbx  forest.blend
data/shaders/: cube.fs  cube.vs  test_fragment_shader.fs  test_fragment_shader_1.fs  test_fragment_shader_2.fs  test_vertex_shader.shader  test_vertex_shader.vs
demos/: Light.mov
src/: CMakeLists.txt  asset_info.cpp  axis.hpp  buffer.hpp  camera.hpp  color.hpp  consts.hpp  cube_data.hpp  handle.hpp  load_model.cpp  load_model.hpp  loader.cpp  loader.hpp  main.cpp  matrix.hpp  opengl.cpp  opengl.hpp  operators.hpp  point.hpp  pov.hpp  quaternion.hpp  shader.cpp  shader.hpp  system.hpp  texcoord.hpp  texture.cpp  texture.hpp  transforms.hpp  types.hpp  vector.hpp  vertex_array.cpp  vertex_array.hpp
